--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 *{
     margin: 0;
     padding: 0;
+    background-color: #f5f5f5;
 }
+/*Alt styles til mobile first og derefter desktop*/
 /* Forside billedet styles her*/
 .bigimage img{
     max-width: 100%;
