--- a/style.css
+++ b/style.css
@@ -3,6 +3,27 @@
     padding: 0;
     background-color: #f5f5f5;
 }
+/* Styling af navbar med hjælp fra W3schools https://www.w3schools.com/howto/howto_js_mobile_navbar.asp*/
+.navigation-mobile{
+    overflow: hidden;
+    position: relative;
+}
+.navigation-mobile #subpages{
+    display: none;
+}
+.navigation-mobile a{
+    display: block;
+    text-decoration: none;
+}
+.navigation-mobile a.icon{
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.navigation-mobile a:hover{
+    background-color: #d6ccc5;
+}
 /*Alt styles til mobile first og derefter desktop*/
 /* Forside billedet styles her*/
 .bigimage img{
