--- a/style.css
+++ b/style.css
@@ -61,10 +61,13 @@
     margin-top: 1em;
 }
 /*Her starter styling af knap til work*/
+.work .clickme{
+    margin-top: 1.8rem;
+    text-align: center;
+}
 .work a{
     text-decoration: none;
-    text-align: center;
-    display: block;
-    margin-top: 1.5rem;
-    color: rgb(9, 9, 9);
+    padding: 0.3em 2.5em;
+    color: #f5f5f5;
+    background-color: #a2a9a6;
 }
