--- a/style.css
+++ b/style.css
@@ -87,3 +87,17 @@
     text-align: center;
     margin-top: 1em;
 }
+.shoot .book{
+    text-align: center;
+    margin-top: 1.8rem;
+    margin-bottom: 2rem;
+}
+.shoot a{
+    text-decoration: none;
+    padding: 0.3em 2.5em;
+    color: #f5f5f5;
+    background-color: #a2a9a6;
+}
+.shoot a:hover{
+    background-color: #919694;
+}
