--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,400;1,600&family=Yanone+Kaffeesatz&display=swap');
 *{
     margin: 0;
     padding: 0;
