Kommentarer til ny font

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*Ny font fra google fonts https://fonts.google.com/specimen/Playfair+Display?category=Serif&preview.text=HELLO%20AND%20WELCOME&preview.text_type=custom#standard-styles*/
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,400;1,600&family=Yanone+Kaffeesatz&display=swap');
 *{
     margin: 0;
