--- a/style.css
+++ b/style.css
@@ -105,3 +105,16 @@
 .shoot a:hover{
     background-color: #919694;
 }
+/*Styling af howto sektionen*/
+.howto h1{
+    text-align: center;
+    margin-top: 0.5em;
+}
+.howto h3{
+    text-align: center;
+    margin-top: 0.5em;
+}
+.howto p{
+    text-align: center;
+    margin-top: 0.5em;
+}
