--- a/style.css
+++ b/style.css
@@ -118,6 +118,10 @@
     text-align: center;
     margin-top: 0.5em;
 }
+.gallery-titel{
+    text-align: center;
+    padding: 1.8em;
+}
 /* Her starter styling af grid*/
 .gallery {
     display: grid;
