--- a/style.css
+++ b/style.css
@@ -129,3 +129,22 @@
 .thirdimg img{
     max-width: 100%;
 }
+/*Styling af team sektionen*/
+.team{
+    background-color: #d6ccc5;
+    padding: 0.5rem;
+    margin-top: 1rem;
+}
+.team h2{
+    text-align: center;
+    background-color: #d6ccc5;
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+}
+.team img{
+    max-width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    /* Hjælp til centrering af billedet fra https://www.w3schools.com/howto/howto_css_image_center.asp*/
+}
