--- a/style.css
+++ b/style.css
@@ -152,9 +152,27 @@
     margin-top: 1.8rem;
     margin-bottom: 2rem;
 }
+.team-click hr{
+    margin-top: 2rem;
+}
 .team-click a{
     text-decoration: none;
     padding: 0.3em 2.5em;
     color: #f5f5f5;
     background-color: #a2a9a6;
+}
+.team-click a:hover{
+    background-color: #919694;
+}
+.reviews h2{
+    text-align: center;
+    margin-top: 1.5em;
+}
+.reviews p{
+    text-align: center;
+    margin-top: 1.5em;
+}
+.reviews h4{
+    text-align: center;
+    margin-top: 1.5em;
 }
