--- a/style.css
+++ b/style.css
@@ -6,6 +6,25 @@
     background-color: #f5f5f5;
 }
 /*Alt styles til mobile first og derefter desktop*/
+/*Styling af links over billeder med hjælp fra https://www.w3schools.com/howto/howto_css_image_text.asp*/
+.bigimage{
+    position: relative;
+    text-align: center;
+}
+.bigimage a{
+    position: absolute;
+    top: 0.8em;
+    left: 1em;
+    text-decoration: none;
+    background-color: transparent;
+    color: #f5f5f5;
+    font-weight: bold;
+}
+#subpages a{
+    position: absolute;
+    top: 0.8em;
+    left: 8em;
+}
 /* Forside billedet styles her*/
 .bigimage img{
     max-width: 100%;
