--- a/style.css
+++ b/style.css
@@ -6,26 +6,6 @@
     background-color: #f5f5f5;
 }
 /*Alt styles til mobile first og derefter desktop*/
-/*Styling af links over billeder med hjælp fra https://www.w3schools.com/howto/howto_css_image_text.asp*/
-.bigimage{
-    position: relative;
-    text-align: center;
-}
-.bigimage a{
-    position: absolute;
-    top: 0.8em;
-    left: 1em;
-    text-decoration: none;
-    background-color: transparent;
-    color: #f5f5f5;
-    font-weight: bold;
-    font-size: 1.2em;
-}
-#subpages a{
-    position: absolute;
-    top: 0.8em;
-    left: 8.5em;
-}
 /* Forside billedet styles her*/
 .bigimage img{
     max-width: 100%;
@@ -106,16 +86,18 @@
 }
 /*Styling af howto sektionen*/
 .howto h1{
+    background-color: #d6ccc5;
     text-align: center;
-    margin-top: 0.5em;
+    padding: 1rem;
 }
 .howto h3{
+    background-color: #d6ccc5;
     text-align: center;
-    margin-top: 0.5em;
 }
 .howto p{
+    background-color: #d6ccc5;
     text-align: center;
-    margin-top: 0.5em;
+    padding: 1rem;
 }
 .gallery-titel{
     text-align: center;
