--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@
     padding: 0;
     background-color: #f5f5f5;
 }
+/*Root og var() lavet med hjælp fra W3schools https://www.w3schools.com/css/css3_variables.asp*/
+:root{
+    --dark: #a2a9a6;
+    --hover: #919694;
+    --pink: #d4a59d;
+    --darkbeige: #d6ccc5;
+    --beige: #ede6e2;
+    --white: #f5f5f5;
+}
 /*Alt styles til mobile first og derefter desktop*/
 /* Forside billedet styles her*/
 .bigimage img{
@@ -50,12 +59,12 @@
 .work a{
     text-decoration: none;
     padding: 0.3em 2.5em;
-    color: #f5f5f5;
-    background-color: #a2a9a6;
+    color: var(--white);
+    background-color: var(--dark);
 }
 /* Stylet a href med hjælp fra link https://css-tricks.com/css-basics-styling-links-like-boss/*/
 .work a:hover{
-    background-color: #919694;
+    background-color: var(--hover);
 }
 /*Her starter stylingen af den næste sektion "book a shoot"*/
 .shoot img{
@@ -78,24 +87,24 @@
 .shoot a{
     text-decoration: none;
     padding: 0.3em 2.5em;
-    color: #f5f5f5;
-    background-color: #a2a9a6;
+    color: var(--white);
+    background-color: var(--dark);
 }
 .shoot a:hover{
-    background-color: #919694;
+    background-color: var(--hover);
 }
 /*Styling af howto sektionen*/
 .howto h1{
-    background-color: #ede6e2;
+    background-color: var(--beige);
     text-align: center;
     padding: 1rem;
 }
 .howto h3{
-    background-color: #ede6e2;
+    background-color: var(--beige);
     text-align: center;
 }
 .howto p{
-    background-color: #ede6e2;
+    background-color: var(--beige);
     text-align: center;
     padding: 1rem;
 }
@@ -133,13 +142,13 @@
 }
 /*Styling af team sektionen*/
 .team{
-    background-color: #ede6e2;
+    background-color: var(--beige);
     padding: 2rem;
     margin-top: 1rem;
 }
 .team h2{
     text-align: center;
-    background-color: #ede6e2;
+    background-color: var(--beige);
     margin-bottom: 0.8em;
 }
 .team img{
@@ -160,11 +169,11 @@
 .team-click a{
     text-decoration: none;
     padding: 0.3em 2.5em;
-    color: #f5f5f5;
-    background-color: #a2a9a6;
+    color: var(--white);
+    background-color: var(--dark);
 }
 .team-click a:hover{
-    background-color: #919694;
+    background-color: var(--hover);
 }
 .reviews h2{
     text-align: center;
