--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     background-color: #f5f5f5;
+    font-family: 'Playfair Display', serif;
 }
 /*Root og var() lavet med hjælp fra W3schools https://www.w3schools.com/css/css3_variables.asp*/
 :root{
@@ -15,6 +16,18 @@
     --white: #f5f5f5;
 }
 /*Alt styles til mobile first og derefter desktop*/
+.navbar{
+    background-color: var(--dark);
+    height: 3.8rem;
+}
+.navbar a{
+    float: left;
+    padding: 1em;
+    background-color: var(--dark);
+    text-decoration: none;
+    color: var(--white);
+    font-size: 1.2em;
+}
 /* Forside billedet styles her*/
 .bigimage img{
     max-width: 100%;
@@ -23,10 +36,12 @@
 .bigimage h1{
     text-align: center;
     margin-top: 1em;
+    font-size: 1.3em;
 }
 .bigimage h3{
     text-align: center;
     margin-top: 1em;
+    font-size: 1.2em;
 }
 .bigimage p{
     text-align: center;
@@ -45,6 +60,7 @@
 .work h1{
     text-align: center;
     margin-top: 1em;
+    font-size: 1.3em;
 }
 .work p{
     text-align: center;
@@ -73,6 +89,7 @@
 .shoot h1{
     text-align: center;
     margin-top: 1em;
+    font-size: 1.3em;
 }
 .shoot p{
     text-align: center;
@@ -175,6 +192,7 @@
 .team-click a:hover{
     background-color: var(--hover);
 }
+/*Styling af review sektionen*/
 .reviews h2{
     text-align: center;
     margin-top: 1.5em;
