--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 .bigimage h1{
     text-align: center;
     margin-top: 1em;
-    font-size: 1.3em;
+    font-size: 1.2em;
     font-family: didot;
     text-transform: uppercase;
 }
@@ -67,7 +67,9 @@
 .work h1{
     text-align: center;
     margin-top: 1em;
-    font-size: 1.3em;
+    font-size: 1.2em;
+    font-family: didot;
+    text-transform: uppercase;
 }
 .work p{
     text-align: center;
@@ -84,6 +86,7 @@
     padding: 0.3em 2.5em;
     color: var(--white);
     background-color: var(--dark);
+    text-transform: uppercase;
 }
 /* Stylet a href med hjælp fra link https://css-tricks.com/css-basics-styling-links-like-boss/*/
 .work a:hover{
@@ -96,7 +99,9 @@
 .shoot h1{
     text-align: center;
     margin-top: 1em;
-    font-size: 1.3em;
+    font-size: 1.2em;
+    font-family: didot;
+    text-transform: uppercase;
 }
 .shoot p{
     text-align: center;
@@ -113,6 +118,7 @@
     padding: 0.3em 2.5em;
     color: var(--white);
     background-color: var(--dark);
+    text-transform: uppercase;
 }
 .shoot a:hover{
     background-color: var(--hover);
@@ -137,6 +143,9 @@
 .gallery-titel{
     text-align: center;
     padding: 1.8em;
+    font-size: 1em;
+    font-family: didot;
+    text-transform: uppercase;
 }
 /* Her starter styling af grid*/
 .gallery {
@@ -176,6 +185,9 @@
     text-align: center;
     background-color: var(--beige);
     margin-bottom: 0.8em;
+    font-size: 1.3em;
+    font-family: didot;
+    text-transform: uppercase;
 }
 .team img{
     max-width: 80%;
@@ -197,6 +209,7 @@
     padding: 0.3em 2.5em;
     color: var(--white);
     background-color: var(--dark);
+    text-transform: uppercase;
 }
 .team-click a:hover{
     background-color: var(--hover);
@@ -205,6 +218,9 @@
 .reviews h2{
     text-align: center;
     margin-top: 1.5em;
+    font-size: 1.3em;
+    font-family: didot;
+    text-transform: uppercase;
 }
 .reviews p{
     text-align: center;
