--- a/style.css
+++ b/style.css
@@ -230,5 +230,15 @@
 .reviews h4{
     text-align: center;
     margin-top: 1.5em;
-    padding-bottom: 3em;
+    padding-bottom: 2em;
+}
+.footer{
+    background-color: var(--darkbeige);
+    height: 8rem;
+}
+.footer h3{
+    display: inline-block;
+    background-color: var(--darkbeige);
+    margin-left: 6.1em;
+    margin-top: 1.5em;
 }
