--- a/style.css
+++ b/style.css
@@ -20,19 +20,34 @@
 }
 /*Alt styles til mobile first og derefter desktop*/
 .navbar{
-    background-color: var(--darkbeige);
-    height: 4rem;
+    overflow: hidden;
+    background-color: var(--beige);
+    padding: 20px 10px;
 }
 .navbar a{
-    float: left;
-    padding: 1em;
-    background-color: var(--darkbeige);
+    float: none;
+    display: block;
+    text-align: left;
+    color: rgb(07, 07, 07);
+    padding: 10px;
     text-decoration: none;
-    color: var(--white);
-    font-size: 1.2em;
+    font-size: 18px;
+    line-height: 25px;
+    background-color: var(--beige);
+}
+.navbar a.logo{
+    font-size: 25px;
+    font-weight: bold;
 }
 .navbar a:hover{
-    color: var(--hover)
+    background-color: var(--darkbeige);
+}
+.navbar a:active{
+    background-color: var(--pink);
+    color: var(--white);
+}
+.links{
+    float: none;
 }
 /* Forside billedet styles her*/
 .bigimage img{
@@ -249,5 +264,11 @@
     margin-top: 1.5em;
 }
 @media only screen and (min-width: 660px){  
-
+.navbar a{
+float: left;
+text-align: center;
+}
+.links{
+    float: right;
+}
 }
