--- a/style.css
+++ b/style.css
@@ -152,10 +152,14 @@
 }
 .team h2{
     text-align: center;
-    margin-bottom: 0.8em;
+    margin-top: 1em;
     font-size: 1.3em;
     font-family: didot;
     text-transform: uppercase;
+}
+.team p{
+    text-align: center;
+    margin-top: 1em;
 }
 .team img{
     max-width: 80%;
@@ -166,11 +170,7 @@
 }
 .team-click{
     text-align: center;
-    margin-top: 1.8rem;
-    margin-bottom: 2rem;
-}
-.team-click hr{
-    margin-top: 2rem;
+    margin-bottom: 3rem;
 }
 .team-click a{
     text-decoration: none;
@@ -257,6 +257,9 @@
     text-align: center;
     margin-top: 1.5em;
     padding-bottom: 2em;
+}
+.reviews hr{
+    margin-bottom: 1.5rem;
 }
 /*Styling af footer i grid*/
 .footer{
