--- a/style.css
+++ b/style.css
@@ -502,37 +502,56 @@ float: left;
     grid-template-areas: 
     "silver-package"
     "silver-content"
+    "silver-more"
     "silver-activities"
     "silver-a"
     "gold-package"
     "gold-content"
+    "gold-more"
     "gold-activities"
     "gold-a"
     "bronze-package"
     "bronze-content"
+    "bronze-more"
     "bronze-activities"
     "bronze-a";
 }
+/*Hvert element tildeles først en plads i grid og bliver derefter stylet*/
 .silver-package{
     grid-area: silver-package;
     padding: 1rem;
+    margin-top: 1rem;
     text-align: center;
 }
 .silver-content{
     grid-area: silver-content;
-    text-align: center;
     padding: 1em;
+    margin-left: 7rem;
+}
+/*Hver li liste skal styles individuelt med tag list-style:none for at fjerne bullet points*/
+.silver-content li{
+    list-style: none;
+}
+.silver-more{
+    grid-area: silver-more;
+    margin-top: 1em;
+    text-align: center;
 }
 .silver-activities{
     grid-area: silver-activities;
-    text-align: center;
     margin-top: 1rem;
+    margin-left: 7rem;
 }
+.silver-activities li{
+    list-style: none;
+}
+/*Her styles knapperne*/
 .silver-a{
     grid-area: silver-a;
     text-align: center;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 }
+/*Her styles selve linket*/
 .silver-a a{
     text-decoration: none;
     padding: 0.3em 2.5em;
@@ -540,6 +559,7 @@ float: left;
     background-color: var(--pink);
     text-transform: uppercase;
 }
+/*Her styles hver knap til at skifte når bruger hover over*/
 .silver-a a:hover{
     background-color: var(--hover);
 }
@@ -550,18 +570,29 @@ float: left;
 }
 .gold-content{
     grid-area: gold-content;
-    text-align: center;
     margin-top: 1rem;
+    margin-left: 7rem;
+}
+.gold-content li{
+    list-style: none;
+}
+.gold-more{
+    grid-area: gold-more;
+    margin-top: 1em;
+    text-align: center;
 }
 .gold-activities{
     grid-area: gold-activities;
-    text-align: center;
     margin-top: 1rem;
+    margin-left: 7rem;
+}
+.gold-activities li{
+    list-style: none;
 }
 .gold-a{
     grid-area: gold-a;
     text-align: center;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 }
 .gold-a a{
     text-decoration: none;
@@ -580,18 +611,29 @@ float: left;
 }
 .bronze-content{
     grid-area: bronze-content;
-    text-align: center;
     margin-top: 1rem;
+    margin-left: 7rem;
+}
+.bronze-content li{
+    list-style: none;
+}
+.bronze-more{
+    grid-area: bronze-more;
+    margin-top: 1em;
+    text-align: center;
 }
 .bronze-activities{
     grid-area: bronze-activities;
-    text-align: center;
+    margin-left: 7rem;
     margin-top: 1rem;
+}
+.bronze-activities li{
+    list-style: none;
 }
 .bronze-a{
     grid-area: bronze-a;
     text-align: center;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 }
 .bronze-a a{
     text-decoration: none;
